--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Nicolas Francken | Full-Stack Dev</title>
+    <title>Diego Menéndez </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
